--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <!--
         Define the Web.config template, which is used when creating the initial Web.config,
@@ -167,6 +167,7 @@
             <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
             <remove name="OPTIONSVerbHandler" />
             <remove name="TRACEVerbHandler" />
+            <add name="Jenkins-exe" path="*.cgi" verb="*" modules="CgiModule" scriptProcessor="C:\Program Files\Jenkins\jenkins.exe" resourceType="File" />
 
             <add name="ScriptHandlerFactory" verb="*" path="*.asmx" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
             <add name="ScriptHandlerFactoryAppServices" verb="*" path="*_AppService.axd" preCondition="integratedMode" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
